tests/ui/attributes/unix_sigpipe/unix_sigpipe-bare.stderr
error: malformed `unix_sigpipe` attribute input
  --> $DIR/unix_sigpipe-bare.rs:3:1
   |
LL | #[unix_sigpipe]
   | ^^^^^^^^^^^^^^^ help: must be of the form: `#[unix_sigpipe = "inherit|sig_ign|sig_dfl"]`

error: aborting due to 1 previous error

