tests/ui/attributes/unix_sigpipe/unix_sigpipe-bare.rs
#![feature(unix_sigpipe)]

#[unix_sigpipe] //~ error: malformed `unix_sigpipe` attribute input
fn main() {}
